Mobile compatibility w/ four col

--- a/ebpub/ebpub/templates/db/snippets/filter_left_nav.html
+++ b/ebpub/ebpub/templates/db/snippets/filter_left_nav.html
@@ -18,7 +18,7 @@ $j(document).ready(function() {
 {% endautoescape %}
 </script>
 
-<div id="schemanav">
+<div id="schemanav" class="four col">
 	<h2>{% if filters %}Refine your search{% else %}Filter this section{% endif %}</h2>
 	<!-- FILTERS W/ EXISTING VALUES -->
 	{% if filters %}
