--- a/ebpub/ebpub/templates/db/snippets/newsitem_list/news-articles.html
+++ b/ebpub/ebpub/templates/db/snippets/newsitem_list/news-articles.html
@@ -1,8 +1,32 @@
 {% for newsitem in newsitem_list %}
 	<li id="newsitem-{{ newsitem.id }}" class="newsitem news-articles">
-		<span class="location">{{ newsitem.location_name }}</span>
-		<strong class="title"><a href="{{ newsitem.item_url }}" class="url">{{ newsitem.title }}</a></strong>
-		<blockquote class="excerpt"><p>{{ newsitem.attributes.excerpt }}</p></blockquote>
-		<p class="info">Published by <strong class="source">{{ newsitem.attributes.source.name }}</strong> on <strong class="dateposted">{{ newsitem.item_date|date:"F j, Y" }}</strong>.</p>
+		<div class="date">
+			<span class="month">
+				{{ newsitem.item_date|date:"M" }}
+			</span>
+			<span class="day">
+				{{ newsitem.item_date|date:"d" }}
+			</span>
+		</div>
+		<div class="title_place">
+			<span class="title">
+				<a href="{{ newsitem.item_url}}" class="url">{{ newsitem.title|truncatewords_html:20 }}</a> 
+			</span>
+			<span class="location">
+				{% if location_url %}
+				<a href="{{ newsitem.location_url }}">
+				{% endif %}
+				@{{ newsitem.location_name }}
+				{% if location_url %}
+				</a>
+				{% endif %}
+			</span>
+		</div>
+		<blockquote class="excerpt">
+			<p>{{ newsitem.attributes.excerpt }}</p>
+		</blockquote>
+		<div class="info">
+			Published by <strong class="source">{{ newsitem.attributes.source.name }}</strong>
+		</div>
 	</li>
 {% endfor %}
