--- a/ebpub/ebpub/templates/db/filter.html
+++ b/ebpub/ebpub/templates/db/filter.html
@@ -5,46 +5,19 @@
 {% block title %}{% if not filters.filters_for_display %}Search {{ schema.plural_name }}{% else %}{{ schema.plural_name|capfirst }}{% endif %}{% for filter in filters.filters_for_display %} &rsaquo; {{ filter.value }} {% endfor %}{% endblock %}
 
 {% block content %}
-	<div id="content">
-
-		<h1>Search {{ schema.plural_name }}</h1>
+	<div id="content" class="row">
+		<div class="row">
+			<div class="twelve col">
+				<h1 class="search_title">{% map_icon_img schema %} {{ schema.plural_name }}</h1><span class="for_title">Displaying {% if newsitem_list %} {{ page_start_index|intcomma }}-{{ page_end_index|intcomma }}, page {{ page_number|intcomma }}{% endif %}{% if filters.location %} | {{ filters.location.location_name }}{% endif %}</span>
+			</div>
+		</div>
 		<!-- block extradescription -->
 		{% block extradescription %}
 		{%endblock%}
 		<!-- end block extradescription -->
 
-		<div id="schema-detail-link"><a href="{% url ebpub-schema-detail schema.slug %}">Statistics and more ...</a></div>
-
-		{% include "db/snippets/filter_left_nav.html" %}
-
-		<div id="maintext">
-
-		{% if newsitem_list %}
-
-			<p>{% map_icon_img schema %} <strong>{{ schema.plural_name|capfirst }} {{ page_start_index|intcomma }}-{{ page_end_index|intcomma }}</strong> (Page {{ page_number|intcomma }})</p>
-			<ul>
-				{% newsitem_list_by_schema newsitem_list ungrouped %}
-			</ul>
-			{% if has_next or has_previous %}
-			<ul>
-				{% if has_previous %}<li><a href="?page={{ previous_page_number }}" rel="nofollow">Previous</a></li>{% endif %}
-				{% if has_next %}<li><a href="?page={{ next_page_number }}" rel="nofollow">Next</a></li>{% endif %}
-			</ul>
-			{% endif %}
-		{% else %}
-			<h2>No {{ schema.plural_name }} were found for the given search criteria.</h2>
-            {% if filters.filters_for_display %}
-			<p>You might want to try&hellip;</p>
-			<ul>
-				{% for filter in filters.filters_for_display %}
-				<li><a href="{% filter_url filters -filter.slug %}" rel="nofollow">Removing the “{{ filter.label }}” filter</a></li>
-				{% endfor %}
-			</ul>
-            {% endif %}
-
-		{% endif %}
-		</div> <!-- maintext -->
-
+	<div id="schema-detail-link"><a href="{% url ebpub-schema-detail schema.slug %}">Statistics and more ...</a></div>
+	<div id="maintext" class="eight col">
 		<div id="mapwrapper">
 		  <script type="text/javascript">
 		  {% autoescape off %}
@@ -66,13 +39,49 @@
 		{% if large_map_url %}
 		<a class="large-map-link" href="{{ large_map_url }}">Explore these items on a larger map</a>
 		{% endif %}
+		{% if lookup_descriptions %}
+			<dl>
+				{% for lookup in lookup_descriptions %}
+				<dt>{{ lookup.name }}</dt>
+				<dd>{{ lookup.description|safe }}</dd>
+				{% endfor %}
+			</dl>
+		{% endif %}
+
+		{% if newsitem_list %}
+
+			<p> &nbsp; </p>
+			<ul>
+				{% newsitem_list_by_schema newsitem_list ungrouped %}
+			</ul>
+			{% if has_next or has_previous %}
+			<ul>
+				{% if has_previous %}<li><a href="?page={{ previous_page_number }}" rel="nofollow">Previous</a></li>{% endif %}
+				{% if has_next %}<li><a href="?page={{ next_page_number }}" rel="nofollow">Next</a></li>{% endif %}
+			</ul>
+			{% endif %}
+		{% else %}
+			<h2 class="nothing_found">No {{ schema.plural_name }} were found for the given search criteria.</h2>
+            {% if filters.filters_for_display %}
+			<p>You might want to try&hellip;</p>
+			<ul class="location_type_list">
+				{% for filter in filters.filters_for_display %}
+				<li><a href="{% filter_url filters -filter.slug %}" rel="nofollow">Removing the “{{ filter.label }}” filter</a></li>
+				{% endfor %}
+			</ul>
+            {% endif %}
+
+		{% endif %}
+
+	</div> <!-- maintext -->
 
 
 		<!--
 		<div class="subscribe-links"><p>what would subscription links on this page point to?</p>
 		</div> -->
 		<!-- /# subscribe-links -->
-
+		{% include "db/snippets/filter_left_nav.html" %}
 	</div><!--/ #content -->
+
 
 {% endblock %}
