--- a/ebpub/ebpub/templates/db/schema_list.html
+++ b/ebpub/ebpub/templates/db/schema_list.html
@@ -6,11 +6,11 @@
 
 {% block content %}
 <div id="content">
-	<h1>Browse news by type</h1>	
+<div class="row">
   {% for schemabunch in schema_list %}
-		<h2><a href="{{ schemabunch.schema.url }}">{{ schemabunch.schema.plural_name|capfirst }}</a></h2>
-		<h3>Browse:</h3>
-		<ul>
+  <a class="schema_list_item" href="{{ schemabunch.schema.url }}"><h2 class="schema_list_item_news red" style="color:#FF4747"><img src="{{ schemabunch.schema.map_icon_url }}" style="float:left; margin-right:10px;"/>{{ schemabunch.schema.plural_name|capfirst }}</h2></a>
+	<p>{{ schemabunch.schema.short_description }} <a href="{{ schemabunch.schema.url }}">More info&hellip;</a></p>
+		<ul class="location_type_list">
 			{% if schemabunch.schema.allow_charting %}{% for schemafield in schemabunch.schemafield_list %}
 			  <li><a href="{% filter_url  schemabunch.schema +schemafield %}">By {{ schemafield.browse_by_title }}</a></li>
 			{% endfor %}
@@ -20,6 +20,8 @@
 			{% endfor %}
 			{% if schemabunch.schema.allow_charting %}<li><a href="{% filter_url schemabunch.schema %}">Custom filter</a></li>{% endif %}
 		</ul>
+	</div>
+	{% if forloop.counter0|divisibleby:"2" %} {% else %} </div><div class="row">{% endif %}
   {% endfor %}
 </div><!--/ #content-->
 {% endblock %}
